fix(style): changed body overflow-x to auto

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -95,7 +95,7 @@ html,
 body {
     max-width: 100vw;
     height: 100vh;
-    overflow-x: hidden;
+    overflow-x: auto;
     font-family: var(--main-font);
 }
 
